# diplom

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
app/: celery_app.py  config.py  locust_test.py  main.py  security.py
app/api/v1/: auth.py  cart.py  category.py  notify.py  order.py  product.py  reviews.py  sellers.py  statistics.py  user.py
app/core/: auth.py  celery_config.py  rabbitmq.py  statistics.py
app/db/: async_session.py  celery_task.py  models.py  pg_session.py  session.py
app/db/crud/: cart.py  category.py  order.py  product.py  reviews.py  sellers.py  user.py
app/schemas/: cart.py  cart_product.py  category.py  orders.py  products.py  reviews.py  sellers.py  users.py
fastapi/: Dockerfile  pyproject.toml
fastapi/app/frontend/test-app/: craco.config.js  package-lock.json  package.json
fastapi/app/frontend/test-app/src/: App.js
fastapi/app/frontend/test-app/src/my_scripts/: auth.js  base.js  cart.js  category.js  order.js  product.js  reviews.js  sellers.js  statistics.js  user.js
fastapi/app/frontend/test-app/src/pages/: Login.js  Register.js
