[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["flezzzer <141737861+flezzzer@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
clickhouse-driver = {extras = ["async"], version = "^0.2.9"}
python-multipart = "^0.0.20"
sqlalchemy = "^2.0.37"
clickhouse-sqlalchemy = "^0.3.2"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic = {extras = ["email"], version = "^2.10.6"}
clickhouse-connect = "^0.8.15"
aioredis = "^2.0.1"
websockets = "^15.0.1"
react = "^4.3.0"
redis = "^5.2.1"
alembic = "^1.15.1"
bcrypt = "^4.3.0"
aiochclient = "^2.6.0"
aiohttp = "^3.11.18"
aiormq = "^6.8.1"
asyncpg = "^0.30.0"
celery = {extras = ["redis"], version = "^5.5.2"}
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
locust = "^2.36.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
